--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: The Largest Crowd Dataset
+title: CrowdVerse
 author:
   name: PingRui Lai
   email: laipingrui@sjtu.edu.cn
@@ -6,7 +6,7 @@ author:
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  Agency Bootstrap theme converted to a Jekyll theme, plus new features: Google Analytics, Markdown support, custom pages, and more!
+  A Large Scale Multitask Crowd Dataset for Comprehensive Human-Centric Analysis
 
 # Build settings
 
