--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ baseurl: 'minima/'
 # add a line comment on "theme: minima" above.
 #remote_theme: jekyll/minima
 
-plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
+# plugins:
+#   - jekyll-feed
+#   - jekyll-seo-tag
 
 # Theme-specific settings
 
