--- a/_config.yml
+++ b/_config.yml
@@ -20,16 +20,16 @@ baseurl: 'minima/'
 # add a line comment on "theme: minima" above.
 #remote_theme: jekyll/minima
 
-# plugins:
-#   - jekyll-feed
-#   - jekyll-seo-tag
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
 
 # Theme-specific settings
 
 # If you want to link only specific pages in your header, use this and add the path to the pages
 # in order as they should show up.
-# header_pages:
-#   - about.md
+header_pages:
+  - about.md
 
 # Set to `true` to show excerpts on the homepage.
 #show_excerpts: false
