--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: CrowdVerse
 author:
-  name: PingRui Lai
-  email: laipingrui@sjtu.edu.cn
+  name: 0
+  email: 0
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
